# CMakeList.txt : CMake project for linked_lists, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (linked_lists "linked_list.cpp" "linked_list.h")

# TODO: Add tests and install targets if needed.
